# acheron

./: .env.example  .envrc.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.edge  Dockerfile.grpc-stub  Dockerfile.orchestrator  Dockerfile.worker-stub  Justfile  README.md  acheron.yaml.example  conftest.py  docker-compose.yml  opencode.json  pyproject.toml
.agentic/skills/code-review-perform/: SKILL.md
.agentic/skills/code-review-tackle/: SKILL.md
.agentic/skills/code-review-update/: SKILL.md
.github/workflows/: build-workers.yml
dashboard/: Dockerfile  app.py
dashboard/templates/: index.html
dashboard/templates/partials/: cost.html  jobs.html  workers.html
dashboard/tests/: conftest.py  test_cost_partial.py  test_dashboard.py
docs/code_review/: architecture.md  code-quality.md  correctness.md  operations.md  summary.md  surface.md  verification.md
docs/superpowers/plans/: 2026-06-17-dashboard-plan.md  2026-06-17-docker-compose-plan.md  2026-06-17-grpc-streaming-plan.md  2026-06-17-http-worker-plan.md  2026-06-17-worker-integration-tests-plan.md  2026-06-18-layer7a-storage-redis.md  2026-06-18-layer7b-compose.md  2026-06-18-layer7c-tls.md  2026-06-19-layer9a-streaming-executor.md  2026-06-19-layer9b-ii-redis-async.md  2026-06-21-layer-11-health-checks-and-dashboard.md  2026-06-21-layer10-local-workers-and-resuming.md  2026-06-22-layer8a-orchestrator-transports.md  2026-06-22-layer8a-qwen3tts-worker-and-deploy.md  2026-06-22-layer8a-sdk-foundation.md  2026-06-23-layer8b-asr-worker.md  2026-06-23-layer8b-orchestrator-transports.md  2026-06-23-layer8b-sdk-foundation.md  2026-06-23-layer8b-worker-and-deploy.md  2026-06-23-layer8c-orchestrator-and-planner.md  2026-06-23-layer8c-translategemma-worker-and-deploy.md  2026-06-24-code-review-tackle-round-2-b01-host-path-traversal.md  2026-06-24-code-review-tackle-round-2-b02-httpworker-multipart-cleanup.md  2026-06-24-code-review-tackle-round-2-b03-httpworker-multipart-edge-cases.md  2026-06-24-code-review-tackle-round-2-b04-settings-sprawl-a.md  2026-06-24-code-review-tackle-round-2-b05-settings-sprawl-b.md  2026-06-24-code-review-tackle-round-2-b06-settings-cleanup-c.md  2026-06-24-code-review-tackle-round-2-b07-exception-handling-a.md  2026-06-24-code-review-tackle-round-2-b08-exception-handling-b.md  2026-06-24-code-review-tackle-round-2-b09-runpod-forwarder-security.md  2026-06-24-code-review-tackle-round-2-b10-health-monitor-perf.md  2026-06-24-code-review-tackle-round-2-b11-httpworker-memory-materialization.md  2026-06-24-code-review-tackle-round-2-b12-worker-sdk-consolidation.md  2026-06-24-code-review-tackle-round-2-b13-plan-time-chunking.md  2026-06-24-code-review-tackle-round-2-b14-worker-cleanup-tls.md  2026-06-24-code-review-tackle-round-2-b15-translategemma-handler-refactor.md  2026-06-24-code-review-tackle-round-2-b16-arch-type-safety-low.md  2026-06-24-code-review-tackle-round-2-b17-type-safety-typed-models.md  2026-06-24-code-review-tackle-round-2-b18-type-safety-stringly-typed.md  2026-06-24-code-review-tackle-round-2-b19-maint-cleanup-python2.md  (+8 more)
docs/superpowers/reviews/: 2026-06-19-9a-review.md  2026-06-19-9b-ii-review.md  2026-06-21-layer10-review.md
docs/superpowers/specs/: 2026-06-16-acheron-design.md  2026-06-17-layer-4-api.md  (+39 more)
proto/: synthesis.proto
scripts/: __init__.py  generate_dev_certs.py
src/acheron/: __init__.py  api_client.py  cli.py  tls.py
stubs/: grpc_worker_stub.py  translation_stub.py  worker_stub.py
stubs/_sdk_base/: __init__.py  mock_runpod.py
stubs/asr_local_stub/: main.py  worker.yaml
stubs/nltk/: __init__.pyi
stubs/tests/: conftest.py  test_entry_points.py  test_grpc_stub_health.py  test_grpc_tls.py  test_grpc_worker_stub.py  test_stubs_healthy.py  test_translation_stub.py  test_worker_stub.py
stubs/translation_local_stub/: main.py  worker.yaml
stubs/translation_runpod_stub/: main.py  worker.yaml
stubs/tts_grpc_stub/: main.py  worker.yaml
stubs/tts_local_stub/: main.py  worker.yaml
stubs/tts_runpod_stub/: main.py  worker.yaml
stubs/tts_volume_stub/: main.py  worker.yaml
tests/: conftest.py  test_init.py  test_tls.py
tests/core/: test_chunking.py  test_errors.py  test_interfaces.py  test_models.py  test_planner.py  test_schemas.py
tests/integration/: conftest.py  test_cli_errors.py  test_job_lifecycle.py  test_multi_job.py  test_tls.py  test_worker_integration.py  test_worker_registration.py
tests/scripts/: test_generate_dev_certs.py
tests/shell/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_cost.py  test_data_dir.py  test_executors.py  test_grpc_worker.py  test_health_monitor.py  test_health_providers.py  test_healthcheck.py  test_http_worker.py  test_job_store.py  test_local_handlers.py  test_local_worker.py  test_logging_context.py  test_orchestrator.py  test_registry.py  test_step_handler.py  test_streaming_executor.py  test_tls.py
tests/worker_sdk/: conftest.py  test_app.py  test_artifacts.py  test_cli.py  test_cloud.py  test_cloud_audio.py  test_config_loader.py  test_edge_http.py  test_edge_http_multipart.py  test_handler.py  test_handler_signature.py  test_inputs.py  test_io.py  test_pricing.py  test_registration.py  test_runpod_client.py  test_runpod_price.py  test_schemas.py  test_server.py  test_settings.py  test_smoke.py
workers/: __init__.py  _shared.py
workers/_shared/: pyproject.toml
workers/granite_speech/: Dockerfile.runpod  README.md  __init__.py  handler.py  pyproject.toml  runpod_entrypoint.py  worker.edge.yaml  worker.yaml
workers/granite_speech/tests/: __init__.py  test_capabilities.py  test_handler.py  test_runpod_entrypoint.py
workers/qwen3tts/: Dockerfile.runpod  README.md  __init__.py  handler.py  pyproject.toml  runpod_entrypoint.py  worker.edge.yaml  worker.yaml
workers/qwen3tts/tests/: test_capabilities.py  test_handler.py
workers/translategemma/: Dockerfile.runpod  README.md  __init__.py  handler.py  pyproject.toml  runpod_entrypoint.py  worker.edge.yaml  worker.yaml
workers/translategemma/tests/: __init__.py  test_capabilities.py  test_handler.py  test_runpod_entrypoint.py
(+100 files in other folders)
