[project]
name = "acheron"
version = "0.1.0"
description = "Distributed asynchronous audio-transformation pipeline for converting EPUB or audio input into offline chapterized audiobooks in a target language"
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
authors = [{ name = "Julia" }]
dependencies = [
    "aiofiles~=24.0",
    "click~=8.4",
    "fastapi~=0.137",
    "grpcio~=1.81",
    "grpcio-health-checking~=1.81",
    "httpx~=0.28",
    "nltk~=3.9",
    "pydantic~=2.13",
    "redis~=7.0",
    "rich~=14.3",
    "tenacity~=9.1",
    "uvicorn[standard]~=0.49",
]

[project.optional-dependencies]
# Used by the dashboard stage; the acheron wheel itself does not import jinja2.
dashboard = ["jinja2~=3.1"]

[project.scripts]
acheron = "acheron.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acheron"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D105",
    "D107",
    "D203",
    "D211",
    "D213",
    "EM101",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
    "TRY003",
]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S", "PLC0415", "PLR2004", "TC001", "TC003", "ANN", "ARG001", "ARG002", "FBT"]
"dashboard/tests/**" = ["D", "S", "PLC0415", "PLR2004", "TC001", "TC003", "ANN", "ARG001", "ARG002", "FBT"]
"dashboard/__init__.py" = ["D104"]
"dashboard/templates/__init__.py" = ["D104"]
"stubs/**" = ["D", "S", "PLC0415", "PLR2004", "TC001", "TC003", "ANN", "ARG001", "ARG002", "FBT"]
"src/acheron/proto/**" = ["I", "E", "F", "W", "D", "ANN", "N"]
"src/acheron/core/interfaces.py" = ["TC001"]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "src:stubs"
exclude = ["src/acheron/proto/"]

[[tool.mypy.overrides]]
module = ["grpc.*", "grpc_health.*", "google.protobuf.*", "testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["acheron.proto.*"]
ignore_errors = true

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src", "tests"]
extraPaths = ["src", "stubs"]
exclude = [".venv", "src/acheron/proto/"]
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedCallResult = false
reportMissingImports = false

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--strict-markers --cov=acheron --cov-report=term-missing --cov-fail-under=80 --dist=loadgroup -n auto"
testpaths = ["tests", "stubs/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets",
    "ignore:.*wait_container_is_ready.*:DeprecationWarning:testcontainers",
]

[tool.importlinter]
root_package = "acheron"

[[tool.importlinter.contracts]]
name = "core-shell-boundary"
type = "forbidden"
source_modules = ["acheron.core"]
forbidden_modules = ["acheron.shell"]

[dependency-groups]
dev = [
    "basedpyright~=1.39",
    "cryptography~=49.0",
    "grpcio-tools~=1.81",
    "import-linter~=2.11",
    "inline-snapshot~=0.34",
    "mypy~=2.1",
    "pytest~=9.1",
    "pytest-asyncio~=1.4",
    "pytest-cov~=7.1",
    "pytest-xdist~=3.8",
    "respx~=0.23",
    "ruff~=0.15",
    "testcontainers[redis]~=4.14",
    "types-aiofiles~=24.0",
    "types-grpcio~=1.0",
    "types-grpcio-health-checking~=1.0",
    "types-protobuf~=5.29",
]
