[project]
name = "acheron-qwen3tts"
version = "0.1.0"
description = "RunPod Serverless worker package for Qwen3-TTS-12Hz-1.7B-CustomVoice"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
    "acheron",
    "qwen-tts",
    "soundfile",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
